--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "gh-pages": "^2.2.0",
+    "netlify-cli": "^2.32.0",
     "pnotify": "^4.0.0",
     "query-string": "^6.10.1",
     "react": "^16.12.0",
